--- a/index.html
+++ b/index.html
@@ -28,9 +28,14 @@
     <label for="update_body">Body</label>
     <input type="text" id="update_body">
     <button type="button" id="updatebutton">Update</button>
+    <br/>
+    <label for="delete_petId">Pet ID</label>
+    <input type="number" id="delete_petId">
+    <button type="button" id="deletebutton">Delete</button>
 
     <div id="entries"></div>
 
     <script src="./requests.js"></script>
+    <script src="delete.js"></script>
   </body>
   </html>
