--- a/create-pet.html
+++ b/create-pet.html
@@ -12,6 +12,24 @@
 
 <body>
     <div class="container text-center">
+        <div class="row">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <a class="navbar-brand" href="#">&ThickSpace; View Pets</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-item nav-link" href="index.html">&ThickSpace;Home</a>
+                        <a class="nav-item nav-link" href="petstoreRead.html">&ThickSpace;Read</a>
+                        <a class="nav-item nav-link active" href="create-pet.html">&ThickSpace; <u>Add</u></a>
+                    </div>
+                </div>
+            </nav>
+        </div>
+        <br />
+        <br />
         <h1>Create a pet!</h1>
         <br />
         <div class="container">
@@ -42,7 +60,7 @@
                 <div class="row">
                     <div class="col">
                         <div class="d-grid gap-2 col-6 mx-auto">
-                            <button class="btn btn-primary" type="button" id="crt-pet-btn">Create Pet</button>
+                            <button class="btn btn-dark" type="button" id="crt-pet-btn">Create Pet</button>
                         </div>
                     </div>
                 </div>
