--- a/index.html
+++ b/index.html
@@ -1,51 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <title>Requests</title>
-  </head>
-  <body>
 
-    <button type="button" id="fetchbutton">Fetch</button>
-    <br/>
-    <label for="create_userId">User ID</label>
-    <input type="number" id="create_userId">
-    <label for="create_id">ID</label>
-    <input type="number" id="create_id">
-    <label for="create_title">Title</label>
-    <input type="text" id="create_title">
-    <label for="create_body">Body</label>
-    <input type="text" id="create_body">
-    <button type="button" id="createbutton">Create</button>
-    <br/>
-    <label for="update_userId">User ID</label>
-    <input type="number" id="update_userId">
-    <label for="update_id">ID</label>
-    <input type="number" id="update_id">
-    <label for="update_title">Title</label>
-    <input type="text" id="update_title">
-    <label for="update_body">Body</label>
-    <input type="text" id="update_body">
-    <button type="button" id="updatebutton">Update</button>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  <title>Pets</title>
+</head>
 
-      <button type = "btn btn-primary text-center" id = "toRead">
-        <a type = "btn" id = "read" href = "./petstoreRead.html">Click to head to read</a>
-      </button>
-    <br/>
-    <label for="delete_petId">Pet ID</label>
-    <input type="number" id="delete_petId">
-    <button type="button" id="deletebutton">Delete</button>
+<body>
+  <div class="container">
+    <div class="row">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">&ThickSpace; View Pets</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="index.html">&ThickSpace;<u>Home</u></a>
+            <a class="nav-item nav-link" href="petstoreRead.html">&ThickSpace;Read</a>
+            <a class="nav-item nav-link" href="create-pet.html">&ThickSpace; Add</a>
+          </div>
+        </div>
+      </nav>
+    </div>
+    <br />
+    <br />
+    <h1 class="text-center">Main Page!</h1>
+    <div class="container">
+      <br />
+      <label for="delete_petId">Pet ID</label>
+      <input type="number" id="delete_petId">
+      <button type="button" id="deletebutton">Delete</button>
 
-    <div id="entries"></div>
-
+      <div id="entries"></div>
+    </div>
     <script src="./requests.js"></script>
     <script src="delete.js"></script>
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-    crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+      crossorigin="anonymous"></script>
+</body>
 
-  </body>
-  </html>
+</html>
