added an alert window to id pet

--- a/petstoreRead.html
+++ b/petstoreRead.html
@@ -30,11 +30,11 @@
         </div>
         <br />
         <br />
-        <h1 class="text-center">Read all pets</h1>
+        <h1 class="text-center"><u>View Pets</u></h1>
         <br />
-        <div class="container text-center">
-            <div class="row text-center">
-                <div class="col-md-4 text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
                     <select id="readOptions" class="form-select" name="readOptions">
                         <option selected>Please select what you would like to View?</option>
                         <option>available</option>
@@ -42,7 +42,7 @@
                         <option>sold</option>
                     </select>
                 </div>
-                <div class="col-md-1 text-center">
+                <div class="col-md-1">
                     <button class="btn btn-dark" id="confirmRead" onClick="readAllPets();">Confirm</button>
                 </div>
             </div>
@@ -54,7 +54,7 @@
                         <label for="name">Enter ID:</label>
                     </div>
                 </div>
-                <div class="col-md-1 text-center">
+                <div class="col-md-1">
                 <input type="button" value="submit" id="ReadOne" onClick="readPetByID();" />
             </div>
         </div>
